[package]
name = "scrit"
version = "0.1.0"
authors = ["rb_ <41527196+EndaHallahan@users.noreply.github.com>"]

[dependencies]
google-drive3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-native-tls = "0.2"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
quick-xml = "^0.13.1"
minidom = "*"
walkdir = "2"
rctree = "0.2.1"
